popular collection section done

--- a/index.html
+++ b/index.html
@@ -45,16 +45,143 @@
         </section>
     </header>
     <section class="logo-container">
-            <div class="logo-image">
-                <img src="logos/Alibaba.svg" alt="Brand Logos">
-                <img src="logos/Amazon.svg" alt="Brand Logos">
-                <img src="logos/Daraz.pk Logo.svg" alt="Brand Logos">
-                <img src="logos/Ebay.svg" alt="Brand Logos">
-                <img src="logos/Rakuten.svg" alt="Brand Logos">
-                <img src="logos/Walmart.svg" alt="Brand Logos">
-                <img src="logos/Target.svg" alt="Brand Logos">
+        <div class="logo-image">
+            <img src="logos/Alibaba.svg" alt="Brand Logos">
+            <img src="logos/Amazon.svg" alt="Brand Logos">
+            <img src="logos/Daraz.pk Logo.svg" alt="Brand Logos">
+            <img src="logos/Ebay.svg" alt="Brand Logos">
+            <img src="logos/Rakuten.svg" alt="Brand Logos">
+            <img src="logos/Walmart.svg" alt="Brand Logos">
+            <img src="logos/Target.svg" alt="Brand Logos">
+        </div>
+    </section>
+    <section class="collection-container">
+        <h1>Popular Collections</h1>
+        <div class="collection">
+            <div class="collection-card">
+                <img src="images/tripod.png" alt="Tripod Collection">
+                <h3>Flex Tripod</h3>
+                <p class="price">$50.48</p>
+                <p class="rating"><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </p>
+                <p class="decription">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
             </div>
-        </section>
+            <div class="collection-card">
+                <img src="images/mic.png" alt="Mic Collection">
+                <h3>Flex Tripod</h3>
+                <p class="price">$50.48</p>
+                <p class="rating"><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </p>
+                <p class="decription">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+            </div>
+            <div class="collection-card">
+                <img src="images/airpod.png" alt="Earphones Collection">
+                <h3>Flex Tripod</h3>
+                <p class="price">$50.48</p>
+                <p class="rating"><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99
+                </p>
+                <p class="decription">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+            </div>
+                        <div class="collection-card">
+                <img src="images/drone.png" alt="Drone Collection">
+                <h3>Flex Tripod</h3>
+                <p class="price">$50.48</p>
+                <p class="rating"><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99</p>
+                <p class="decription">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+            </div>
+                        <div class="collection-card">
+                <img src="images/lights.png" alt="Lights Collection">
+                <h3>Flex Tripod</h3>
+                <p class="price">$50.48</p>
+                <p class="rating"><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99</p>
+                <p class="decription">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+            </div>
+                        <div class="collection-card">
+                <img src="images/setup.png" alt="Setup Collection">
+                <h3>Flex Tripod</h3>
+                <p class="price">$50.48</p>
+                <p class="rating"><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99</p>
+                <p class="decription">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+            </div>
+                        <div class="collection-card">
+                <img src="images/camera.png" alt="Camera Collection">
+                <h3>Flex Tripod</h3>
+                <p class="price">$50.48</p>
+                <p class="rating"><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99</p>
+                <p class="decription">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+            </div>
+                        <div class="collection-card">
+                <img src="images/action.png" alt="Tripod Collection">
+                <h3>Flex Tripod</h3>
+                <p class="price">$50.48</p>
+                <p class="rating"><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99</p>
+                <p class="decription">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+            </div>
+                        <div class="collection-card">
+                <img src="images/single-light.png" alt="Single Light Collection">
+                <h3>Flex Tripod</h3>
+                <p class="price">$50.48</p>
+                <p class="rating"><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    4.99</p>
+                <p class="decription">Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+            </div>
+
+        </div>
+        <button class="btn">See More <i class="fa-solid fa-arrow-right"></i></button>
+    </section>
 </body>
 
 </html>
