influencer-gear completed with all device responsiveness

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <header>
         <nav>
             <div class="logo">
+                <div>
+                    <i class="fa-solid fa-bars"></i>
+                </div>
                 <h1>Influencer products</h1>
+                <div>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
             </div>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -100,7 +106,7 @@
                 <p class="decription">Wordwide shifting <br> available <br>
                     Buyers protection possible!</p>
             </div>
-                        <div class="collection-card">
+            <div class="collection-card">
                 <img src="images/drone.png" alt="Drone Collection">
                 <h3>Flex Tripod</h3>
                 <p class="price">$50.48</p>
@@ -109,11 +115,12 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    4.99</p>
+                    4.99
+                </p>
                 <p class="decription">Wordwide shifting <br> available <br>
                     Buyers protection possible!</p>
             </div>
-                        <div class="collection-card">
+            <div class="collection-card">
                 <img src="images/lights.png" alt="Lights Collection">
                 <h3>Flex Tripod</h3>
                 <p class="price">$50.48</p>
@@ -122,11 +129,12 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    4.99</p>
+                    4.99
+                </p>
                 <p class="decription">Wordwide shifting <br> available <br>
                     Buyers protection possible!</p>
             </div>
-                        <div class="collection-card">
+            <div class="collection-card">
                 <img src="images/setup.png" alt="Setup Collection">
                 <h3>Flex Tripod</h3>
                 <p class="price">$50.48</p>
@@ -135,11 +143,12 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    4.99</p>
+                    4.99
+                </p>
                 <p class="decription">Wordwide shifting <br> available <br>
                     Buyers protection possible!</p>
             </div>
-                        <div class="collection-card">
+            <div class="collection-card">
                 <img src="images/camera.png" alt="Camera Collection">
                 <h3>Flex Tripod</h3>
                 <p class="price">$50.48</p>
@@ -148,11 +157,12 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    4.99</p>
+                    4.99
+                </p>
                 <p class="decription">Wordwide shifting <br> available <br>
                     Buyers protection possible!</p>
             </div>
-                        <div class="collection-card">
+            <div class="collection-card">
                 <img src="images/action.png" alt="Tripod Collection">
                 <h3>Flex Tripod</h3>
                 <p class="price">$50.48</p>
@@ -161,11 +171,12 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    4.99</p>
+                    4.99
+                </p>
                 <p class="decription">Wordwide shifting <br> available <br>
                     Buyers protection possible!</p>
             </div>
-                        <div class="collection-card">
+            <div class="collection-card">
                 <img src="images/single-light.png" alt="Single Light Collection">
                 <h3>Flex Tripod</h3>
                 <p class="price">$50.48</p>
@@ -174,7 +185,8 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    4.99</p>
+                    4.99
+                </p>
                 <p class="decription">Wordwide shifting <br> available <br>
                     Buyers protection possible!</p>
             </div>
@@ -182,6 +194,33 @@
         </div>
         <button class="btn">See More <i class="fa-solid fa-arrow-right"></i></button>
     </section>
+    <section class="feature-container">
+        <div class="feature-content">
+            <div class="left-image">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="right-text">
+                <h1>Featured products at one place</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </div>
+    </section>
+    <footer class="footer-container">
+        <div class="footer-content">
+            <h4>Influencer products</h4>
+            <p>Copyright © 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <div class="social">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-dribbble"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
